--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "core-js-pure": "^3.39.0",
     "cra-template": "1.2.0",
     "flowbite-react": "^0.10.2",
+    "jwt-decode": "^4.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
