--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-scripts": "5.0.1",
     "react-spinners": "^0.15.0",
     "react-toastify": "^11.0.2",
+    "recharts": "^3.2.0",
     "sass": "^1.85.0",
     "web-vitals": "^4.2.4",
     "zustand": "^5.0.3"
